--- a/Landing page/index.html
+++ b/Landing page/index.html
@@ -17,7 +17,7 @@
       </ul>
     </header>
 
-    <section class="section-one section">
+    <section class="section-one">
       <div>
         <h1>This website is awesome</h1>
         <p>
@@ -29,32 +29,32 @@
       <div class="section-one-div">this is a placeholder for an image</div>
     </section>
 
-    <section class="section-two section">
+    <section class="section-two">
       <h2>Some random information.</h2>
       <section>
-        <article class="section-two-img">
+        <article class="img-frame">
           <div></div>
           <p>this is some subtext under an illustration or image</p>
         </article>
 
-        <article class="section-two-img">
+        <article class="img-frame">
           <div></div>
           <p>this is some subtext under an illustration or image</p>
         </article>
 
-        <article class="section-two-img">
+        <article class="img-frame">
           <div></div>
           <p>this is some subtext under an illustration or image</p>
         </article>
 
-        <article class="section-two-img">
+        <article class="img-frame">
           <div></div>
           <p>this is some subtext under an illustration or image</p>
         </article>
       </section>
     </section>
 
-    <section class="section-three section">
+    <section class="section-three">
       <p>
         This is an inspiring quote, or a testimonial from a customer. Maybe its
         just filling up space, or maybe people will actually read it. Who knows?
@@ -63,7 +63,7 @@
       <p>-Thor, God of Thunder</p>
     </section>
 
-    <section class="section-four section">
+    <section class="section-four">
       <div>
         <article>
           <h4>Call to action! it's time!</h4>
@@ -74,5 +74,7 @@
         <button>Sign up</button>
       </div>
     </section>
+
+    <footer>Copyright &copy; The Odin project 2021</footer>
   </body>
 </html>
